@@ -2,17 +2,17 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Charts Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.charts;singleton:=true
-Bundle-Version: 2.0.0
+Bundle-Version: 2.0.3
 Bundle-Activator: org.netxms.ui.eclipse.charts.Activator
 Bundle-Vendor: netxms.org
-Require-Bundle: org.eclipse.rap.ui;bundle-version="2.2.0",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.0",
- org.netxms.webui.core;bundle-version="2.0.0",
+Require-Bundle: org.eclipse.rap.ui;bundle-version="2.3.1",
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.3",
+ org.netxms.webui.core;bundle-version="2.0.1",
  org.eclipse.birt.chart.engine;bundle-version="3.7.2",
  org.eclipse.birt.chart.device.extension;bundle-version="3.7.2",
  org.eclipse.birt.chart.engine.extension;bundle-version="3.7.2",
- org.swtchart;bundle-version="0.7.11",
- org.netxms.rap.draw2d;bundle-version="1.5.0"
+ org.swtchart;bundle-version="0.7.13",
+ org.netxms.rap.draw2d;bundle-version="1.5.1"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.charts.api,
